// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/permissions_gates TeamPermissionGate should match snapshot when the team doesn't exists 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Component)
    permissions={
      Array [
        "test_team_permission",
      ]
    }
    teamId="invalid_id"
  >
    <Memo(TeamPermissionGate)
      dispatch={[Function]}
      hasPermission={false}
      permissions={
        Array [
          "test_team_permission",
        ]
      }
      teamId="invalid_id"
    >
      <p />
    </Memo(TeamPermissionGate)>
  </Connect(Component)>
</Provider>
`;

exports[`components/permissions_gates TeamPermissionGate should match snapshot when user have at least on of the permissions 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Component)
    permissions={
      Array [
        "test_team_permission",
        "not_existing_permission",
      ]
    }
    teamId="team_id"
  >
    <Memo(TeamPermissionGate)
      dispatch={[Function]}
      hasPermission={true}
      permissions={
        Array [
          "test_team_permission",
          "not_existing_permission",
        ]
      }
      teamId="team_id"
    >
      <p>
        Valid permission (shown)
      </p>
    </Memo(TeamPermissionGate)>
  </Connect(Component)>
</Provider>
`;

exports[`components/permissions_gates TeamPermissionGate should match snapshot when user have permission 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Component)
    permissions={
      Array [
        "test_team_permission",
      ]
    }
    teamId="team_id"
  >
    <Memo(TeamPermissionGate)
      dispatch={[Function]}
      hasPermission={true}
      permissions={
        Array [
          "test_team_permission",
        ]
      }
      teamId="team_id"
    >
      <p>
        Valid permission (shown)
      </p>
    </Memo(TeamPermissionGate)>
  </Connect(Component)>
</Provider>
`;

exports[`components/permissions_gates TeamPermissionGate should match snapshot when user have permission and use invert 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Component)
    invert={true}
    permissions={
      Array [
        "test_team_permission",
      ]
    }
    teamId="team_id"
  >
    <Memo(TeamPermissionGate)
      dispatch={[Function]}
      hasPermission={true}
      invert={true}
      permissions={
        Array [
          "test_team_permission",
        ]
      }
      teamId="team_id"
    >
      <p />
    </Memo(TeamPermissionGate)>
  </Connect(Component)>
</Provider>
`;

exports[`components/permissions_gates TeamPermissionGate should match snapshot when user have permission system wide 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Component)
    permissions={
      Array [
        "test_system_permission",
      ]
    }
    teamId="team_id"
  >
    <Memo(TeamPermissionGate)
      dispatch={[Function]}
      hasPermission={true}
      permissions={
        Array [
          "test_system_permission",
        ]
      }
      teamId="team_id"
    >
      <p>
        Valid permission (shown)
      </p>
    </Memo(TeamPermissionGate)>
  </Connect(Component)>
</Provider>
`;

exports[`components/permissions_gates TeamPermissionGate should match snapshot when user haven't permission 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Component)
    permissions={
      Array [
        "invalid_permission",
      ]
    }
    teamId="team_id"
  >
    <Memo(TeamPermissionGate)
      dispatch={[Function]}
      hasPermission={false}
      permissions={
        Array [
          "invalid_permission",
        ]
      }
      teamId="team_id"
    >
      <p />
    </Memo(TeamPermissionGate)>
  </Connect(Component)>
</Provider>
`;

exports[`components/permissions_gates TeamPermissionGate should match snapshot when user not have permission and use invert 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Component)
    invert={true}
    permissions={
      Array [
        "invalid_permission",
      ]
    }
    teamId="team_id"
  >
    <Memo(TeamPermissionGate)
      dispatch={[Function]}
      hasPermission={false}
      invert={true}
      permissions={
        Array [
          "invalid_permission",
        ]
      }
      teamId="team_id"
    >
      <p>
        Invalid permission but inverted (shown)
      </p>
    </Memo(TeamPermissionGate)>
  </Connect(Component)>
</Provider>
`;
